Cambios para la funcion de eliminar
primera version de la correcion para la funcion de eliminacion de usuarios, se corrigio el jsp, su archivo js y se agregaron modales